# app/models/user.rb
@@ -18,6 +18,10 @@ class User < ApplicationRecord
   has_many :sightings, foreign_key: :submitter_id, dependent: :restrict_with_error, inverse_of: :submitter
   has_many :evidences, foreign_key: :submitted_by_id, dependent: :restrict_with_error, inverse_of: :submitted_by
   has_many :api_keys, dependent: :destroy
+  has_many :assigned_investigations, class_name: "Investigation", foreign_key: :assigned_investigator_id,
+                                     dependent: :nullify, inverse_of: :assigned_investigator
+  has_many :investigation_notes, foreign_key: :author_id, dependent: :restrict_with_error,
+                                 inverse_of: :author
 
   enum :role, { member: 0, investigator: 1, admin: 2 }, default: :member, validate: true
 end
